attempt to fix header issue on iPhone

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -80,7 +80,6 @@ body {
 	border-top: 15px solid @color-swatch7;
 	padding: 20px 0;
 	position: fixed;
-    -webkit-overflow-scrolling: touch;
     left: 0;
 	right: 0;
 	top: 0;
@@ -90,6 +89,9 @@ body {
 		padding: 7px 0;
         min-height: 100px;
 	}
+    @media @mobile {
+        position: absolute;
+    }
 }
 
 .bk-header .contain {
@@ -416,7 +418,7 @@ body {
 				right: 40px;
 			}
             @media only screen and (max-width: 450px) {
-                top: 29px;
+                top: 27px;
                 right: 19px;
             }
 		}
